--- a/css/root.css
+++ b/css/root.css
@@ -4,6 +4,6 @@
 	--accent: #008800;
 	--text: #000;
 	--audi: #d1062b;
-	--wolks: #0A18B1;
-	--skoda: #309A0F;
+	--wolks: #0a18b1;
+	--skoda: #309a0f;
 }
