--- a/css/audi.css
+++ b/css/audi.css
@@ -142,6 +142,7 @@
 	font-size: 18px;
 	line-height: 1;
 	padding: 25px 15px;
+	transition: background 0.25s ease-out;
 }
 .services__tab.active{
 	background: var(--audi);
@@ -230,7 +231,7 @@
 	border-radius: 20px;
 	background: #fff;
 	filter: drop-shadow(10px 10px 15px rgba(0, 0, 0, 0.25));
-	transition: all 0.25s ease-out;
+	transition: all 0.6s ease-out;
 }
 .feedback .swiper-slide::-webkit-scrollbar{
 	display: none;
@@ -291,10 +292,16 @@
 	align-items: center;
 }
 .video__play{
-	background: url('../img/svg/play-red.svg') no-repeat;
 	width: 80px;
 	height: 80px;
-	background-size: contain;
+	object-fit: contain;
+	cursor: pointer;
+}
+.video__play img{
+	transition: filter 0.25s ease-out	;
+}
+.video__play:hover img{
+	filter:drop-shadow(0px 0px 6px #FF96A9);
 }
 
 /* contacts */
@@ -362,6 +369,9 @@
 	background: rgba(0, 0, 0, 0.6);
 	display: none;
 }
+.modal{
+	color: #fff;
+}
 .popup.active{
 	display: flex;
 }
@@ -392,6 +402,10 @@
 	position: relative;
 	z-index: 2;
 	width: 50%;
+	display: flex;
+	flex-direction: column;
+	height: 470px;
+	justify-content: space-between;
 }
 .popup__text{
 	margin: 15px 0 60px;
@@ -402,6 +416,7 @@
 .popup__btn{
 	border-radius: 40px;
 	margin-top: 70px;
+	width: 340px;
 }
 .popup__input{
 	margin: 15px 0;
