--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,15 @@ body {
 	overflow-x: hidden;
 }
 
+.modal-content{
+	background: transparent;
+	width: fit-content;
+	border: none;
+}
+.modal-dialog{
+	max-width: fit-content;
+	border: none;
+}
 
 
 /* header */
@@ -42,7 +51,12 @@ body {
 }
 .header__link{
 	font-size: 24px;
+	background: transparent;
+	outline: none;
 	transition: color 0.25s ease-out;
+}
+.header__link::after{
+	content: none;
 }
 .header__link:hover{
 	color: var(--accent);
@@ -60,6 +74,21 @@ body {
 	color: #fff;
 	margin-right: 20px;
 	margin-left: 32px;
+}
+.dropdown-menu{
+	border-radius: 20px;
+	padding: 23px 38px;
+	border-width: 0 0 1px 0;
+	border-color: #7B7B7B;
+	border-style: solid;
+	box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.1);
+}
+.dropdown-item{
+	padding: 5px 0;
+}
+.dropdown-item.active{
+	background: transparent;
+	color: #000;
 }
 
 /* footer */
