--- a/css/wolksvagen.css
+++ b/css/wolksvagen.css
@@ -285,7 +285,7 @@
 	height: 700px;
 	background: #D9D9D9;
 	border-width: 4px 0px;
-	border-color: var(--audi);
+	border-color: var(--wolks);
 	border-style: solid;
 	display: flex;
 	justify-content: center;
