--- a/css/audi.css
+++ b/css/audi.css
@@ -13,6 +13,7 @@
 	box-shadow: 0px 0px 10px 2px #FF96A9;
 }
 .btn_primary:first-child:active, .btn_primary:focus-visible{
+	outline: none;
 	border: none;
 	color: #fff;
 	background: #A00202;
@@ -404,18 +405,18 @@
 	width: 50%;
 	display: flex;
 	flex-direction: column;
-	height: 470px;
+	height: 440px;
 	justify-content: space-between;
 }
 .popup__text{
-	margin: 15px 0 60px;
+	margin: 15px 0 0;
 }
 .popup__form{
 	width: 310px;
 }
 .popup__btn{
 	border-radius: 40px;
-	margin-top: 70px;
+	margin-top: 0;
 	width: 340px;
 }
 .popup__input{
