--- a/css/skoda.css
+++ b/css/skoda.css
@@ -16,6 +16,7 @@
 	border: none;
 	color: #fff;
 	background: #20a04f;
+	outline: none;
 	box-shadow: none;
 }
 .popup .btn-check:checked+.btn, .btn.active, .btn.show, 
@@ -284,7 +285,7 @@
 	height: 700px;
 	background: #D9D9D9;
 	border-width: 4px 0px;
-	border-color: var(--audi);
+	border-color: var(--skoda);
 	border-style: solid;
 	display: flex;
 	justify-content: center;
